--- a/l10n/DataAccess/DataAccess.csproj
+++ b/l10n/DataAccess/DataAccess.csproj
@@ -5,8 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190711183536_InitialDb.cs" />
+    <Compile Remove="Migrations\20190711183536_InitialDb.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+    <PackageReference Include="NJsonSchema" Version="10.0.21" />
   </ItemGroup>
 
 </Project>
